// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> Styled Components: <StyledApp /> 1`] = `
.c0 {
  text-align: center;
  font-size: 2rem;
}

<div
  className="c0"
/>
`;

exports[`<App /> Styled Components: <StyledP /> 1`] = `
.c0 {
  text-align: center;
  font-weight: bold;
  font-size: 1rem;
}

<div
  className="c0"
/>
`;
